Move variable information into background and first pass of EDA

--- a/background.Rmd
+++ b/background.Rmd
@@ -73,3 +73,7 @@ The variable `all_adjustments` is a rating of the offense level (how severe the 
 Apart from `criminal_history` and `all_adjustments`, there are several variables related to identity: `age`, `sex`, `educ`, and `race`. `age` refers to a defendant's age in years. `sex` has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female". `educ` refers to a defendant's educational attainment which consists of 6 levels FINISH EXPLAINING HERE. `race` refers to a defendant's race ADD HERE.
 
 Other variables in the dataset include `year`, `sentence_length`, `guilty_plea`, `base_chapter2_adjustments`, `base_chapter2_3_adjustments`, `grid_cell`, `mandatory_min`, `gov_departures`, and `district`. 
+
+A key motivation for this work is exploring how our personal and racial identities influence the judicial sentencing. In a fair, democratic system this identity or perceived identity should not affect how we are treated by the justice system.
+
+In this dataset, as you may have guessed, we have four variables that are related to identity: `age`, `sex`, `educ` (education), and `race`. It is important to note that these characteristics are not independent of one another but can intersect and interact with one another. This combined effect is known as intersectionality. The Center for Intersectional Justice describes the concept of intersectionality as: "the ways in which systems of inequality based on gender, race, ethnicity, sexual orientation, gender identity, disability, class and other forms of discrimination 'intersect' to create unique dynamics and effects" (Ref: [Center for Intersectional Justice](https://www.intersectionaljustice.org/what-is-intersectionality), July 20, 2023). `sex` has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female".
