--- a/background.Rmd
+++ b/background.Rmd
@@ -14,7 +14,7 @@ Race-based inequity in federal criminal sentencing is widely acknowledged, and y
 
 ---
 
-In this case study, we won't cover all of the results, but we will cover some of the most important ones.
+In this case study, we won't cover all of the results described in this paper, but we will cover some of the most important ones. Thinking about the distinction between observational and experimental case studies, this case study can be viewed as an observational study because the researchers are attempting to learn about the population of interest by sampling and observing patterns without manipulating any variables. 
 
 ## Motivation
 
@@ -34,7 +34,7 @@ In conclusion, race-based sentencing disparities in the U.S. not only reflect th
 
 ## The U.S. federal court system
 
-The United States federal court system is, at its core, a three-tiered structure, starting with district courts at the bottom, circuit courts in the middle, and the Supreme Court at the top.
+Before we dive into understanding race-based sentencing disparities in the United States, let's understand some important context about the U.S. federal court system and federal sentencing. The United States federal court system is, at its core, a three-tiered structure, starting with district courts at the bottom, circuit courts in the middle, and the Supreme Court at the top.
 
 The district courts are the workhorses of the federal judiciary, handling the vast majority of federal cases. There are 94 federal judicial districts, including one or more districts in each state, as well as courts for the District of Columbia and Puerto Rico. Three territories of the United States -- the Virgin Islands, Guam, and the Northern Mariana Islands -- have district courts as well.
 
@@ -58,7 +58,7 @@ In 1987, the United States Sentencing Commission created sentencing guidelines f
 
 ## Introduction to the data
 
-We will analyze the over one-half million sentencing records spanning the years 2006 to 2020 provided by the U.S. Sentencing Commission.  Publicly available data is usually quite messy, with many missing and ambiguous entries. For this reason, you will be using a curated copy, that is, one that has been "cleaned up" (Directions for obtaining the curated copy is in the following section of this module). The sentence lengths we are using are given in months and do not include probation nor alternative confinement. Since our aim is to compare lengths of prison sentences imposed, we have eliminated from the data set any cases involving non-citizens--those sentences frequently involve deportation, which is not comparable to prison terms. We combined the information from some variables (creating new variables) and eliminated incomplete data items, that is entire records, for defendants for whom we are not given sufficient information.  We have eliminated the (relatively few) records with sentence lengths of more than 470 months, but retained those with life sentences, which have been coded by the Commission as 470 months.  Finally, because there are very few defendants sentenced in the district court of the Northern Mariana Islands, those items were also eliminated.
+We will analyze the over one-half million sentencing records spanning the years 2006 to 2020 provided by the U.S. Sentencing Commission. Publicly available data is usually quite messy, with many missing and ambiguous entries. For this reason, you will be using a curated copy, that is, one that has been "cleaned up" (directions for obtaining the curated copy is in the following section of this module). The sentence lengths we are using are given in months and do not include probation nor alternative confinement. Since our aim is to compare lengths of prison sentences imposed, we have eliminated from the data set any cases involving non-citizens--those sentences frequently involve deportation, which is not comparable to prison terms. We combined the information from some variables (creating new variables) and eliminated incomplete data items, that is entire records, for defendants for whom we are not given sufficient information.  We have eliminated the (relatively few) records with sentence lengths of more than 470 months, but retained those with life sentences, which have been coded by the Commission as 470 months.  Finally, because there are very few defendants sentenced in the district court of the Northern Mariana Islands, those items were also eliminated.
 
 The data come from two sources: the pre-sentencing report and the Statement of Reasons. The pre-sentencing report is prepared by the District's Probation Office and based on a post-trial, pre-sentencing investigation including an interview with the defendant. A draft of this report is issued to the attorneys for comments and corrections and a final version is given to the attorneys and judge. The Statement of Reasons is a form filled out by the judge explaining/supporting the sentence imposed.
 
@@ -70,10 +70,23 @@ The variable `criminal_history` is coded as a value 1--6, with 1 including a def
 
 The variable `all_adjustments` is a rating of the offense level (how severe the crime is) with adjustments (added considerations that call for higher or lower offense level), as defined by the US Sentencing Commission's Sentencing Guidelines Manual and interpreted by the US Probation Office and/or the Presiding Judge. There are 43 levels where, for example, first degree murder has a base level (that is, level prior to adjustments) of 43 and trespassing has a base level of 4.
 
-Apart from `criminal_history` and `all_adjustments`, there are several variables related to identity: `age`, `sex`, `educ`, and `race`. `age` refers to a defendant's age in years. `sex` has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female". `educ` refers to a defendant's educational attainment which consists of 6 levels FINISH EXPLAINING HERE. `race` refers to a defendant's race ADD HERE.
+Apart from `criminal_history` and `all_adjustments`, there are several variables related to identity: 
+* `age`, which refers to a defendant's age in years.
+* `sex`, which has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female". `educ` refers to a defendant's educational attainment which consists of 6 levels FINISH EXPLAINING HERE.
+* `educ`, and 
+* `race`. refers to a defendant's race ADD HERE.
 
-Other variables in the dataset include `year`, `sentence_length`, `guilty_plea`, `base_chapter2_adjustments`, `base_chapter2_3_adjustments`, `grid_cell`, `mandatory_min`, `gov_departures`, and `district`. 
+It is important to note that these characteristics are not independent of one another but can intersect and interact with one another. This combined effect is known as intersectionality. The Center for Intersectional Justice describes the concept of intersectionality as: "the ways in which systems of inequality based on gender, race, ethnicity, sexual orientation, gender identity, disability, class and other forms of discrimination 'intersect' to create unique dynamics and effects" (Ref: [Center for Intersectional Justice](https://www.intersectionaljustice.org/what-is-intersectionality), July 20, 2023). `sex` has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female".
+
+The nine other variables in the dataset refer to information about the court cases themselves: 
+* `year`, 
+* `sentence_length`, 
+* `guilty_plea`, 
+* `base_chapter2_adjustments`, 
+* `base_chapter2_3_adjustments`, 
+* `grid_cell`, 
+* `mandatory_min`, 
+* `gov_departures`, and 
+* `district`. 
 
 A key motivation for this work is exploring how our personal and racial identities influence the judicial sentencing. In a fair, democratic system this identity or perceived identity should not affect how we are treated by the justice system.
-
-In this dataset, as you may have guessed, we have four variables that are related to identity: `age`, `sex`, `educ` (education), and `race`. It is important to note that these characteristics are not independent of one another but can intersect and interact with one another. This combined effect is known as intersectionality. The Center for Intersectional Justice describes the concept of intersectionality as: "the ways in which systems of inequality based on gender, race, ethnicity, sexual orientation, gender identity, disability, class and other forms of discrimination 'intersect' to create unique dynamics and effects" (Ref: [Center for Intersectional Justice](https://www.intersectionaljustice.org/what-is-intersectionality), July 20, 2023). `sex` has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female".
